registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      enableServiceLinks: false
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - c1-203.tokyotech.org
              weight: 1

      volumes:
        - name: config
          configMap:
            name: config

      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /etc/docker/registry/config.yml
              name: config
              subPath: config.yml
