registry/frontend-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry-frontend

spec:
  entryPoints:
    - websecure
  tls:
    secretName: registry-frontend-tls
  routes:
    - kind: Rule
      match: Host(`frontend.registry.ns.trap.jp`)
      middlewares:
        - name: auth-trap-jp-admin
          namespace: auth
        - name: auth-trap-jp
          namespace: auth
      services:
        - namespace: registry
          kind: Service
          name: registry-frontend
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
